--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [build-system]
-requires = ["setuptools>=61.0", "paramiko", "psycopg2-binary"]
+requires = ["setuptools>=61.0", "scp", "paramiko", "psycopg2-binary"]
 build-backend = "setuptools.build_meta"
 
 [project]
