--- a/setup.cfg
+++ b/setup.cfg
@@ -3,8 +3,8 @@ name = wa_infra_tools
 
 [options]
 package_dir=
-    =wa_infra_tools
+    =src
 packages=find:
 
 [options.packages.find]
-where=wa_infra_tools
+where=src
