added MARS utilities (rosbags and models)

--- a/setup.cfg
+++ b/setup.cfg
@@ -3,6 +3,7 @@ name = wa_infra_tools
 
 [options]
 install_requires =
+    tqdm
     paramiko
     psycopg2-binary
 package_dir=
@@ -11,3 +12,8 @@ packages=find:
 
 [options.packages.find]
 where=src
+
+[options.entry_points]
+console_scripts = 
+    wa-git = wa_infra_tools.git_utils.wa_git:main
+    wa-mars = wa_infra_tools.mars_utils.wa_mars:main
